--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body id="web">
     <header class="header">
-        <img src="images/caroline-lm-ux18C551ghI-unsplash.jpg" width="100px" height="115px" alt="Beuty Clinic" id="logo">
+        <img src="images/caroline-lm-ux18C551ghI-unsplash.jpg" width="100px" height="115px" alt="Dental Clinic" id="logo">
         <a href="#" class="header-menu" target="_blank">Home</a>
         <a href="#" class="header-menu" target="_blank">About</a>
-        <a href="#" class="header-menu" target="#">Prices</a>
+        <a href="#" class="header-menu" target="_blank">Prices</a>
     </header>
 <main id="main">
     <h1>DENTAL CLINIC<br>Cares for your teeth helth<br>
